Add support for offset and limit params for ListScans endpoint
